--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿alembic==1.14.1
+alembic==1.14.1
 annotated-types==0.7.0
 anyio==4.8.0
 bcrypt==4.3.0
@@ -14,11 +14,9 @@ click==8.1.8
 cloudpathlib==0.20.0
 colorama==0.4.6
 confection==0.1.5
-contourpy==1.3.1
 cryptography==44.0.0
 curated-tokenizers==0.0.9
 curated-transformers==0.1.1
-cycler==0.12.1
 cymem==2.0.11
 Deprecated==1.2.18
 distro==1.9.0
@@ -32,7 +30,6 @@ Flask-Compress==1.17
 Flask-Limiter==3.10.1
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
-fonttools==4.55.8
 fsspec==2025.2.0
 fuzzywuzzy==0.18.0
 greenlet==3.1.1
@@ -47,7 +44,6 @@ itsdangerous==2.2.0
 Jinja2==3.1.5
 jiter==0.8.2
 joblib==1.4.2
-kiwisolver==1.4.8
 langcodes==3.5.0
 language_data==1.3.0
 Levenshtein==0.26.1
@@ -57,7 +53,6 @@ Mako==1.3.9
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplotlib==3.10.0
 mdurl==0.1.2
 mpmath==1.3.0
 murmurhash==1.0.12
@@ -76,10 +71,8 @@ preshed==3.0.9
 pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
-pydub==0.25.1
 Pygments==2.19.1
 PyJWT==2.10.1
-pyparsing==3.2.1
 pypdf==5.2.0
 pypdfium2==4.30.1
 pytest==8.3.4
@@ -95,7 +88,7 @@ rich==13.9.4
 safetensors==0.5.2
 scikit-learn==1.6.1
 scipy==1.15.1
-sentence-transformers==3.4.1
+sentence-transformers==3.1.1
 setuptools==75.8.0
 shellingham==1.5.4
 six==1.17.0
@@ -106,18 +99,16 @@ spacy-alignments==0.9.1
 spacy-curated-transformers==0.3.0
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
-spacy-transformers==1.3.5
-SpeechRecognition==3.11.0
+spacy-transformers==1.3.8
 SQLAlchemy==2.0.37
 srsly==2.5.1
-srt==3.5.3
 sympy==1.13.1
 thinc==8.3.4
 threadpoolctl==3.5.0
 tokenizers==0.15.2
 torch==2.6.0
 tqdm==4.67.1
-transformers==4.36.2
+transformers==4.39.3
 typer==0.15.1
 types-click==7.1.8
 types-Flask==1.1.6
@@ -127,10 +118,8 @@ types-SQLAlchemy==1.4.53.38
 types-Werkzeug==1.0.9
 typing_extensions==4.12.2
 urllib3==2.3.0
-vosk==0.3.45
 wasabi==1.1.3
 weasel==0.4.1
-websockets==14.1
 Werkzeug==3.1.3
 wheel==0.45.1
 wrapt==1.17.2
